[package]
name = "rocker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs", "hostname", "mount", "process", "sched", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
